# FlowProcessor

./: .gitignore  README.md  migrate_main_window.sh
flowproc-project/: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CONSOLIDATION.md  AS263_GFP Table.csv  AT25-AS278_Day4.csv  AT25-AS284_Monocyte.csv  CHANGELOG.md  CSV_BATCH_TEST_SUMMARY.md  CSV_ROBUSTNESS_ANALYSIS.md  DEBUG_GUIDE.md  DEBUG_SUMMARY.md  EXCEPTION_HANDLING_IMPROVEMENTS.md  GUI_VISUALIZATION_ANALYSIS.md  LEGEND_ENHANCEMENT_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION_CHECKLIST.md  Makefile  PLOTTING_TEST_SUMMARY.md  POPULATION_FILTER_IMPLEMENTATION.md  POPULATION_FILTER_SHORTNAMES_IMPLEMENTATION.md  PYINSTALLER.md  README.md  SEGFAULT_PREVENTION_GUIDE.md  SEM_ERROR_BARS_IMPLEMENTATION.md  TEST_RESULTS_SUMMARY.md  TIMECOURSE_UNIFICATION_SUMMARY.md  VISUALIZATION_DIALOG_ANALYSIS.md  VISUALIZATION_DIALOG_LAYOUT_UPDATE.md  VISUALIZATION_REFACTORING_ANALYSIS.md  build_mac_app.sh  conftest.py  debug.sh  debug_monitor.py  debug_title_issue.py  debug_title_issue_simple.py  dev-run.sh  install.sh  project_structure.txt  pyproject.toml  (+14 more)
flowproc-project/.github/workflows/: ci.yml
flowproc-project/.hypothesis/constants/: 0f7edde5150b5aff  12bb117c2b97af4d  150a5449f5ac0094  2898b9da2fe07ba3  46439af3cd70b2a8  47e1d30a134b74e2  5c07a7b773685077  63975fec874b959f  67948e8c3c5e3fc7  730c03540562ea6b  8036294ba37d0227  8dfe49650de504ff  b03e9c915c438cd6  b20e27e7fa2bdc95  cab8eafe292347ec  cb98911f02a6fdfc  e86cf4b39f3ef394  f4e3a4eb8d743dd7  fdb328aa676ca225
flowproc-project/.hypothesis/examples/04e6b3400353b141/: 67240c0ce5df119e
flowproc-project/config/: README.md  config.json
flowproc-project/debug/: README.md  analyze_html_size.py  debug.sh  debug_mapping.py  debug_monitor.py  detailed_html_analysis.py  quick_debug.py  system_health_check.py  test_cdn_vs_embedded.py  test_direct_visualization.py  test_html_generation.py  test_html_size.py  test_industry_standard_visualizations.py  test_simple_visualizer.py  test_timecourse_performance.py  test_visualization_debug.py  test_visualization_dialog.py  test_visualization_display_dialog.py  test_visualization_fix.py  test_visualization_fix_simple.py  test_y_axis_options.py  validate_migration.py  visualization_debug.py  webview_test.py
flowproc-project/docs/: BROWSER_CACHING.md  PACKAGING_UPDATES.md  PDF_EXPORT.md  PROJECT_STRUCTURE.md  PYINSTALLER_GUIDE.md  README.md  REFACTORING_SUMMARY.md  test_app_stability.py  test_webview.py
flowproc-project/docs/analysis/: BACKWARD_COMPATIBILITY_REMOVAL_SUMMARY.md  CLEANUP_SUMMARY.md  DEPENDENCY_ANALYSIS_SUMMARY.md  NAMING_IMPROVEMENT_SUMMARY.md  advanced_dependency_analysis.json  advanced_dependency_analyzer.py  comprehensive_dependency_analyzer.py  comprehensive_dependency_report.json  dependency_analysis.json  dependency_map.dot  unused_imports_final_report.md  view_comprehensive_analysis.py  view_dependency_analysis.py
flowproc-project/flowproc/: __init__.py  __main__.py  benchmark_performance.py  cli.py  config.py  data_io.py  exceptions.py  gui.py  logging_config.py  parsing.py  plotting.py  resource_utils.py  setup.py.bak  setup_dependencies.py  transform.py  vectorized_aggregator.py  visualize.py  writer.py
flowproc-project/flowproc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
flowproc-project/flowproc/application/: __init__.py  container.py  exceptions.py
flowproc-project/flowproc/core/: __init__.py  constants.py  exceptions.py  models.py  protocols.py  validation.py
flowproc-project/flowproc/domain/: __init__.py
flowproc-project/flowproc/domain/aggregation/: README.md  (+3 more)
flowproc-project/flowproc/gui/: __init__.py  async_processor.py  config_handler.py  main.py  processor.py  visualizer.py  widgets.py  window.py
flowproc-project/flowproc/infrastructure/: __init__.py
flowproc-project/flowproc/presentation/: __init__.py
flowproc-project/flowproc/resources/: entitlements.plist  icon.icns
flowproc-project/flowproc/tests/: claude_test.py  config_handler.py  conftest.py  generate_test_csv.py  sample_mapping_diagnostic.py  test_async_and_vectorized.py  test_exception_handling.py  test_flowproc.py  test_gui.py  test_logging.py  test_parsing.py  test_visualize.py  test_visualizer.py  test_writer.py
flowproc-project/scripts/: README.md  build_package.sh  build_production.sh  build_pyinstaller.sh  migration_helper.py  pip-install.sh  pre-commit-test.sh  project_setup.sh  quick-test.sh  quick_install.sh  safe_test_runner.py  safe_test_runner_v2.py  setup-pre-commit.sh  setup.sh  system_health_check.py  test_suite.sh  validate_refactoring.py
flowproc-project/tests/: __init__.py  config_handler.py  test_exception_handling.py  test_individual_timepoints.py  test_plot_generation.py  test_real_data_individual_timepoints.py  test_time_column_selection.py  test_timecourse_width.py  test_webview.py
flowproc-project/tests/data/: 237_monocyte.csv  AT25-AS222-HSC.csv  AT25-AS238.csv  AT25-AS242 data SC.csv  AT25-AS271_GFP.csv  AT25-AS272_GFP.csv  AT25-AS278_Day 3.csv  AT25-AS278_FullStudy-1.csv  AT25-AS293.csv  AT25-AS295.csv  DiD.csv  __init__.py  test_data.csv  test_time_data.csv
flowproc-project/tests/fixtures/: __init__.py
flowproc-project/tests/integration/: __init__.py  diagnostic_test.py  sample_mapping_diagnostic.py  test_async_and_vectorized.py  test_csv_demo.py  test_csv_demo_functionality.py  test_entry_point.py  test_flowproc.py  test_gui.py  test_logging.py  test_parsing.py  test_plotting_changes.py  test_plotting_comprehensive.py  test_real_world_validation.py  test_sample_mapping_diagnostic.py  test_sample_parser.py  test_simple_csv.py  test_visualize.py  test_visualizer.py  test_with_csv_batch.py  test_writer.py
flowproc-project/tests/performance/: __init__.py  benchmark_performance.py
flowproc-project/tests/unit/: __init__.py  conftest.py  test_configuration_validation.py  test_event_handler.py  test_input_validation_service.py  test_main_window.py  test_refactored_visualization.py  test_state_manager.py  test_time_service.py  test_ui_builder.py  test_validation_service.py
(+150 files in other folders)
