[project]
name = "flowproc"
version = "V1"
description = "A high-performance tool for processing flow cytometry CSV data with async GUI support and vectorized data aggregation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "PySide6>=6.5.0",
    "plotly>=5.15.0",
    "selenium>=4.15.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0",
]
license = {text = "MIT"}
authors = [
    {name = "FlowProc Development Team", email = "dev@flowproc.example.com"}
]

[project.scripts]
flowproc = "flowproc.presentation.gui.main:main"
flowproc-cli = "flowproc.presentation.cli.cli:main"

[project.gui-scripts]
flowproc-gui = "flowproc.presentation.gui.main:main"

[build-system]
requires = [
    "setuptools>=68.0",
    "wheel>=0.40",
    "pyinstaller>=6.0.0",
]
build-backend = "setuptools.build_meta"

[tool.pyinstaller]
# PyInstaller configuration
spec-file = "flowproc.spec"
workpath = "build/pyinstaller"
distpath = "dist/pyinstaller"
clean-build = true

[tool.briefcase]
project_name = "FlowProcessor"
bundle = "com.example"
version = "V1"
description = "A high-performance GUI application for processing flow cytometry data with async support and vectorized aggregation"
license-files = ["LICENSE"]
sources = [
    "flowproc",
]

[tool.briefcase.app.flowproc]
formal_name = "FlowProcessor"
description = "A high-performance GUI application for processing flow cytometry data with async support and vectorized aggregation"
requires = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "PySide6>=6.5.0",
    "plotly>=5.15.0",
    "selenium>=4.15.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[tool.briefcase.app.flowproc.macOS]
icon = "flowproc/resources/icons/icon.icns"
entitlements = "flowproc/resources/entitlements.plist"

[tool.briefcase.app.flowproc.windows]
requires = []

[tool.briefcase.app.flowproc.linux]
requires = []
